--- a/blogs/themes/mysociety/sass/base/_typography.scss
+++ b/blogs/themes/mysociety/sass/base/_typography.scss
@@ -4,7 +4,7 @@
 
 body{
 	line-height: 1.875em;
-	font-family: "myriad-pro", "Myriad Pro", 'MyriadPro-Regular', 'Myriad Pro Regular', Frutiger, DroidSans, 'DroidSans', sans-serif;
+	font-family: "myriad-pro", "Myriad Pro", 'MyriadPro-Regular', 'Myriad Pro Regular', Frutiger, DroidSans, 'Droid Sans', 'DroidSans', sans-serif;
 }
 
 
